<resources>
    <string name="app_name">Nitip</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Sudah punya akun? Login</string>
    <string name="section_home">Featured</string>
    <string name="section_trip">Trip</string>
    <string name="section_sell">Be a Seller</string>
    <string name="section_search">Search</string>
    <string name="section_request">Request</string>
    <string name="section_on_progress">On Progress</string>
    <string name="section_completed">Completed</string>
    <string name="text_register">Belum punya akun? Register</string>
</resources>
