<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_activity_login_background"
    android:padding="16dp">

    <ImageView
        android:id="@+id/activity_login_iv_logo"
        android:src="@mipmap/ic_launcher"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/activity_login_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorHint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/activity_login_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/textColorPrimary" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/activity_login_btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:text="@string/button_login"
        android:background="@color/colorPrimary"
        android:textColor="@color/textColorPrimary" />

    <TextView
        android:id="@+id/activity_login_tv_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/text_register"
        android:textColor="@color/textColorPrimary"
        android:textSize="16dip" />

</LinearLayout>